@@ -105,6 +105,9 @@ message Main {
         .PB_App.AppLoadFileRequest app_load_file_request = 48;
         .PB_App.AppButtonPressRequest app_button_press_request = 49;
         .PB_App.AppButtonReleaseRequest app_button_release_request = 50;
+        .PB_App.GetErrorRequest app_get_error_request = 63;
+        .PB_App.GetErrorResponse app_get_error_response = 64;
+        .PB_App.DataExchangeRequest app_data_exchange_request = 65;
         .PB_Gui.StartScreenStreamRequest gui_start_screen_stream_request = 20;
         .PB_Gui.StopScreenStreamRequest gui_stop_screen_stream_request = 21;
         .PB_Gui.ScreenFrame gui_screen_frame = 22;
